Working on the docs

--- a/website/source/docs/rails.html.haml
+++ b/website/source/docs/rails.html.haml
@@ -46,3 +46,76 @@ title: HappySeed Rails Documentation
     = link_to "happy_seed:angular_install", "/docs/README.10.angular_install.html"
   %li
     = link_to "happy_seed:jazz_hands", "/docs/README.12.jazz_hands.html"
+
+%section#what.cream.over
+  .background
+  .container
+    .row
+      .left-col
+        %h2.icon.icon-solid-gems Solid Gems
+      .right-col
+        %h3 Stand on the shoulders of giants. Use only what you&nbsp;need.
+        %ul.checkmarked
+          %li
+            Follows 
+            = link_to "12 factors", "http://12factor.net/"
+          %li
+            Can easily be deployed to
+            = link_to "heroku", "http://heroku.com"
+            with foreman/Procfile
+          %li
+            = link_to "bootstrap", "http://getbootstrap.com/"
+            with clean layout structure
+          %li
+            = link_to "haml", "http://haml.info"
+            templates, upgraded rails scaffold templates to work with bootstap
+          %li
+            = link_to "metatag", "https://github.com/kpumuk/meta-tags"
+            setup for SEO
+          %li
+            = link_to "devise", "https://github.com/plataformatec/devise"
+            for user authentication
+          %li
+            = link_to "omniauth", "https://github.com/intridea/omniauth"
+            for oauth support
+          %li
+            = link_to "angular", "https://angularjs.org"
+            installer that fits with the rails asset pipeline
+          %li
+            = link_to "active_admin", "http://activeadmin.info"
+            for admin panel
+
+    .row
+      .left-col
+        %h2.icon.icon-sensible-defaults Sensible Defaults
+      .right-col
+        %h3 Get it working quickly and start&nbsp;customizing
+        %ul.checkmarked
+          %li
+            %span>= link_to "puma", "http://puma.io"
+            %span= " configured"
+          %li Basic layout/navbar structure included
+          %li Devise user models
+          %li Omniauth Callback Controller
+          %li Twitter, Facebook, Instrgram integration optionally wired up
+          %li Site nav structure
+
+
+    .row
+      .left-col
+        %h2.icon.icon-more-awesome-stuff More awesome stuff
+      .right-col
+        %h3 Why stop there?
+
+        %ul.checkmarked
+          %li Splash page template
+          %li Mailchimp signup form
+          %li= link_to "rspec", "http://rspec.info"
+          %li= link_to "factory_girl", "https://github.com/thoughtbot/factory_girl"
+          %li= link_to "webmock", "https://github.com/bblimke/webmock"
+          %li= link_to "vcr", "https://github.com/vcr/vcr"
+          %li= link_to "faker", "https://github.com/stympy/faker"
+          %li= link_to "rspec_api_documentation", "https://github.com/zipmark/rspec_api_documentation"
+          %li= link_to "guard", "http://guardgem.org"
+          %li Plugin generator to write your own rails extensions
+
