--- a/website/source/index.html.haml
+++ b/website/source/index.html.haml
@@ -14,7 +14,8 @@
           .col-md-8.col-md-offset-2.mb-1
             .overbracket{"data-scroll-reveal"=>"enter bottom but wait 1s over 1s"}
               %h2{"data-scroll-reveal"=>"enter bottom but wait 1.5s over 1.5s"}
-                Quickly set up a project <br class="visible-xs">with awesome plugins<br>...and get all the pesky details right
+                The fastest way to get an MVP out the door.<br/>
+                Quickly set up a project and get all the pesky details right
         #bottom{"data-scroll-reveal"=>"enter bottom but wait 4s over 2s"}
           = link_to '#what' do
             %span.glyphicon.glyphicon-chevron-down
@@ -90,85 +91,6 @@
             %p Installs devise_invitable, migrates your db, adds columns for invite, copies over devise views and formats them with bootstrap.
             %p
               =link_to "Check out the docs >", "/docs/README.03.devise_invitable.html"
-
--#%section#what.cream.over
-  .background
-  .container
-    .row
-      .right-col
-        %h1.text-center-sm
-          Quickly generate a new app, <br class="hidden-xs">and then get out of the&nbsp;way.
-          <br>Rails, Middleman, and more.
-    .row
-      .left-col
-        %h2.icon.icon-solid-gems Solid Gems
-      .right-col
-        %h3 Stand on the shoulders of giants. Use only what you&nbsp;need.
-        %ul.checkmarked
-          %li
-            Follows 
-            = link_to "12 factors", "http://12factor.net/"
-          %li
-            Can easily be deployed to
-            = link_to "heroku", "http://heroku.com"
-            with foreman/Procfile
-          %li
-            = link_to "bootstrap", "http://getbootstrap.com/"
-            with clean layout structure
-          %li
-            = link_to "haml", "http://haml.info"
-            templates, upgraded rails scaffold templates to work with bootstap
-          %li
-            = link_to "metatag", "https://github.com/kpumuk/meta-tags"
-            setup for SEO
-          %li
-            = link_to "devise", "https://github.com/plataformatec/devise"
-            for user authentication
-          %li
-            = link_to "omniauth", "https://github.com/intridea/omniauth"
-            for oauth support
-          %li
-            = link_to "angular", "https://angularjs.org"
-            installer that fits with the rails asset pipeline
-          %li
-            = link_to "active_admin", "http://activeadmin.info"
-            for admin panel
-
-    .row
-      .left-col
-        %h2.icon.icon-sensible-defaults Sensible Defaults
-      .right-col
-        %h3 Get it working quickly and start&nbsp;customizing
-        %ul.checkmarked
-          %li
-            %span>= link_to "unicorn", "http://unicorn.bogomips.org"
-            %span= " configured"
-          %li Basic layout/navbar structure included
-          %li Devise user models
-          %li Omniauth Callback Controller
-          %li Twitter, Facebook, Instrgram integration optionally wired up
-          %li Site nav structure
-
-
-
-    .row
-      .left-col
-        %h2.icon.icon-more-awesome-stuff More awesome stuff
-      .right-col
-        %h3 Why stop there?
-
-        %ul.checkmarked
-          %li Splash page template
-          %li Mailchimp signup form
-          %li= link_to "rspec", "http://rspec.info"
-          %li= link_to "factory_girl", "https://github.com/thoughtbot/factory_girl"
-          %li= link_to "webmock", "https://github.com/bblimke/webmock"
-          %li= link_to "vcr", "https://github.com/vcr/vcr"
-          %li= link_to "faker", "https://github.com/stympy/faker"
-          %li= link_to "rspec_api_documentation", "https://github.com/zipmark/rspec_api_documentation"
-          %li= link_to "guard", "http://guardgem.org"
-          %li Plugin generator to write your own rails extensions
-
 
 %section#why.green.under
   .background
@@ -258,3 +180,5 @@
             %p
               = link_to "Read more", "/docs/middleman.html"
               about it!
+
+%section#who
