--- a/website/source/layouts/layout.haml
+++ b/website/source/layouts/layout.haml
@@ -66,7 +66,7 @@
     = partial 'layouts/javascripts'
 
     / # - unless mobile_device?
-    = javascript_include_tag 'scrollReveal.js'
+    / # = javascript_include_tag 'scrollReveal.js'
 
     :javascript
       $(function() { 
