Adding video to blog

--- a/website/source/index.html.haml
+++ b/website/source/index.html.haml
@@ -45,6 +45,11 @@
           %li Use what you need
           %li Much more...
 
+    .row
+      .col-xs-12
+        .embed-responsive.embed-responsive-16by9
+          <iframe src="https://www.youtube.com/embed/hCsPDaKHw6I?rel=0" allowfullscreen></iframe>
+
 %section.cream.over
   .background
   .container
