Updating metadata tag

--- a/website/source/layouts/layout.haml
+++ b/website/source/layouts/layout.haml
@@ -13,7 +13,7 @@
     <meta property="og:url" content="http://seed.happyfuncorp.com"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://s3.amazonaws.com/happyfuncorp-cdn/use-happy-seed.png"/>
-    <meta property="og:description" content="Roses are red, violets are blue, your code sucks because you’re not using seed."/>
+    <meta property="og:description" content="Seed is a rails application generator to build MVPs easily and quickly."/>
 
     = stylesheet_link_tag 'application', "socicons", :media => nil
 
