--- a/lib/generators/happy_seed/splash/templates/app/assets/stylesheets/splash.css.scss
+++ b/lib/generators/happy_seed/splash/templates/app/assets/stylesheets/splash.css.scss
@@ -1,17 +1,35 @@
 //-----------------------------------------
 // Variables, customize bootstrap here
 //-----------------------------------------
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
-$headings-font-family: 'Open Sans';
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,300);
+
+$red: #CD6363;
+$font-family-sans-serif: "Roboto";
+$headings-font-weight: 100;
+$font-size-base: 14px;
+$font-size-h2: floor(($font-size-base * 2.5));
 
 $navbar-height: 75px;
+$navbar-default-bg: rgba(255,255,255, 0.9);
+$navbar-default-link-active-bg: rgb(255,255,255);
+$navbar-default-toggle-border-color: rgb(255,255,255);
+$navbar-default-toggle-icon-bar-bg: #000;
+$navbar-default-toggle-hover-bg: rgb(255,255,255);
+$navbar-default-link-active-color: $red;
 
-$navbar-default-bg: rgba(255,255,255,.5);
-$navbar-inverse-bg: rgba(0,0,0,.9);
+$jumbotron-bg: rgb(255,255,255);
+$border-color: #CCC;
 
+$carousel-indicator-background: rgba(255, 0, 0, 0.2);
+$carousel-indicator-border: 1px solid black;
 
+$input-bg: rgba(255,0,0,0.1);
+$input-border: rgb(0,0,0);
+$form-submit-hover: rgba(0,0,0,0.1);
+$submit-button-color: rgb(0,0,0);
+$submit-border-color: rgb(0,0,0);
+$submit-button-background: transparent;
 // Color Palate
-$brand-primary: #9CCC00;
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
@@ -21,10 +39,68 @@ body {
   position: relative;
 }
 
-.navbar li.active {
-  border-bottom: 2px solid $brand-primary;
+.bottom-border {
+  border-bottom: 1px solid $border-color;
 }
 
-.navbar-inverse a.navbar-brand {
-  color: $brand-primary;
+.logo img{
+  width: 44px;
+  height: 54px;
+  margin: 10px;
 }
+
+.hero {
+  margin-top: 50px;
+}
+
+h4 {
+  font-weight: 300;
+  color: $red;
+}
+
+h2 {
+  margin-bottom: 80px;
+}
+
+#contact h1 {
+  color: $red;
+  margin-bottom: 40px;
+}
+
+section {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+#about {
+  img {
+    margin: 0 auto;
+  }
+}
+
+.avatar {
+  width: 100px;
+  height: 100px;
+  padding: 10px;
+}
+
+.carousel-indicators {
+  bottom: 0;
+  li {
+    border: $carousel-indicator-border;
+    background: $carousel-indicator-background;
+  }
+}
+
+form .btn {
+  background: $submit-button-background;
+  color: $submit-button-color;
+  input {
+    border-color: $submit-border-color;
+    &:hover {
+      background: $form-submit-hover;
+      color: black;
+    }
+  }
+}
+
