Gitub to Octokit

--- a/lib/generators/happy_seed/devise/templates/app/views/devise/registrations/edit.html.haml
+++ b/lib/generators/happy_seed/devise/templates/app/views/devise/registrations/edit.html.haml
@@ -28,16 +28,16 @@
 
       - if devise_mapping.omniauthable?
         .panel.panel-default.only
-          .panel-header
+          .panel-heading
             Connect your accounts
 
           .panel-body
             %ul
               - resource_class.omniauth_providers.each do |provider|
                 - if resource.identities.where( :provider => provider ).first
-                  %li= link_to "Reconnect with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider)
+                  %li= link_to "Reconnect with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), class: "btn btn-primary"
                 - else
-                  %li= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider)
+                  %li= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), class: "btn btn-primary"
 
       .panel.panel-default.only
 
