--- a/website/source/index.html.haml
+++ b/website/source/index.html.haml
@@ -48,7 +48,7 @@
     .row
       .col-xs-12
         .embed-responsive.embed-responsive-16by9
-          <iframe src="https://www.youtube.com/embed/hCsPDaKHw6I?rel=0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/Pn2ehV8EDFM?rel=0" allowfullscreen></iframe>
 
 %section.cream.over
   .background
