--- a/lib/generators/happy_seed/base/templates/app/views/setup/index.html.haml
+++ b/lib/generators/happy_seed/base/templates/app/views/setup/index.html.haml
@@ -19,7 +19,8 @@
         .col-sm-3
           .panel.panel-default.affix#nav
             .panel-heading
-              Nav
+              %h3.panel-title
+                Nav
             .panel-body
               %ul.list-unstyled
                 %li
