--- a/lib/generators/happy_seed/devise/templates/app/views/devise/passwords/new.html.haml
+++ b/lib/generators/happy_seed/devise/templates/app/views/devise/passwords/new.html.haml
@@ -1,10 +1,11 @@
 .container
   .row
-    .center_panel
+    .center-panel
       .panel.panel-default.only
 
         .panel-heading
-          Forgot your password?
+          %h3.panel-title
+            Forgot your password?
 
         .panel-body
 
