--- a/lib/generators/happy_seed/devise/templates/app/views/devise/registrations/new.html.haml
+++ b/lib/generators/happy_seed/devise/templates/app/views/devise/registrations/new.html.haml
@@ -1,11 +1,11 @@
 - @title = "Sign Up"
 .container
   .row
-    .center_panel
+    .center-panel
       .panel.panel-default.only
-
         .panel-heading
-          Sign up
+          %h3.panel-title
+            Sign up
 
         .panel-body
 
