--- a/lib/generators/happy_seed/devise_invitable/templates/app/views/devise/invitations/edit.html.haml
+++ b/lib/generators/happy_seed/devise_invitable/templates/app/views/devise/invitations/edit.html.haml
@@ -1,11 +1,12 @@
 - @title = t 'devise.invitations.edit.header'
 .container
   .row
-    .center_panel
+    .center-panel
       .panel.panel-default.only
 
         .panel-heading
-          = @title
+          %h3.panel-title
+            = @title
 
         .panel-body
 
