--- a/lib/generators/happy_seed/devise_invitable/templates/app/views/devise/invitations/new.html.haml
+++ b/lib/generators/happy_seed/devise_invitable/templates/app/views/devise/invitations/new.html.haml
@@ -1,11 +1,12 @@
 - @title = t "devise.invitations.new.header" 
 .container
   .row
-    .center_panel
+    .center-panel
       .panel.panel-default.only
 
         .panel-heading
-          = t "devise.invitations.new.header" 
+           %h3.panel-title
+            = t "devise.invitations.new.header" 
 
         .panel-body
 
