--- a/lib/generators/happy_seed/bootstrap/templates/app/views/application/_javascripts.html.haml
+++ b/lib/generators/happy_seed/bootstrap/templates/app/views/application/_javascripts.html.haml
@@ -6,7 +6,10 @@
 -# Google Analytics
 - if !ENV['GOOGLE_ANALYTICS_SITE_ID'].blank?
   :javascript
-    var _gaq=[['_setAccount','#{ ENV['GOOGLE_ANALYTICS_SITE_ID'] }'],['_trackPageview']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g,s)}(document,'script'));
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', '#{ ENV['GOOGLE_ANALYTICS_SITE_ID'] }', 'auto');
+    ga('send', 'pageview');
