--- a/lib/generators/happy_seed/base/templates/app/views/setup/index.html.haml
+++ b/lib/generators/happy_seed/base/templates/app/views/setup/index.html.haml
@@ -2,8 +2,10 @@
 %html
   %head
     %title HappySeed Generator setup page
-    %script{:src=>"https://code.jquery.com/jquery-2.1.3.min.js"}
-    %script{:src=>"//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"}
+    = javascript_include_tag 'application'
+    = csrf_meta_tags 
+    / %script{:src=>"https://code.jquery.com/jquery-2.1.3.min.js"}
+    / %script{:src=>"//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"}
     %link{:href=>"//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css", :rel=>"stylesheet"}
     :css
       #nav { margin-top: 25px; }
