--- a/lib/generators/happy_seed/devise/templates/app/views/devise/registrations/edit.html.haml
+++ b/lib/generators/happy_seed/devise/templates/app/views/devise/registrations/edit.html.haml
@@ -1,52 +1,29 @@
-- @title = "Edit #{resource_name.to_s.humanize}"
 .container
   .row
-    .center-panel
-      .panel.panel-default.only
-        .panel-heading
-          %h3.panel-title
-            = @title
-
-        .panel-body
-
-          = form_for resource, as: resource_name, url: registration_path(resource_name), layout: :horizontal do |f|
-
-            / = devise_error_messages!
-
-            = f.email_field :email, autofocus: true
-
-            - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-              %p
-                Currently waiting confirmation for: 
-                = resource.unconfirmed_email
-
-            = f.password_field :current_password
-            = f.password_field :password, autocomplete: "off"
-            = f.password_field :password_confirmation, autocomplete: "off"
-
-            = f.submit "Update"
-
-      - if devise_mapping.omniauthable?
-        .panel.panel-default.only
-          .panel-heading
-            %h3.panel-title
-              Connect your accounts
-
+    .profile.panel
+      = panel title: 'Edit Profile', context: :primary do
+        = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
           .panel-body
-            %ul
-              - resource_class.omniauth_providers.each do |provider|
-                - if resource.identities.where( :provider => provider ).first
-                  %li= link_to "Reconnect with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), class: "btn btn-primary"
-                - else
-                  %li= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider), class: "btn btn-primary"
+            = f.error_notification
 
-      .panel.panel-default.only
+            .form-inputs
+              = f.input :email, required: true, autofocus: true
 
-        .panel-heading
-          %h3.panel-title
-            Cancel my account
+              = if devise_mapping.confirmable? && resource.pending_reconfirmation?
+                %p
+                  Currently waiting confirmation for:
+                  = resource.unconfirmed_email
 
+              = f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false
+              = f.input :password_confirmation, required: false
+              = f.input :current_password, hint: "we need your current password to confirm your changes", required: true
+          .panel-footer
+            .form-actions
+              = f.button :submit, "Update", class: "btn-primary"
+
+    .profile.sidebar
+      = panel title: "Cancel my Account", context: :danger do
         .panel-body
           %p
-            Unhappy? 
-            = button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger"
+            Unhappy?
+            = link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger"
