--- a/lib/generators/happy_seed/devise/templates/app/views/devise/registrations/new.html.haml
+++ b/lib/generators/happy_seed/devise/templates/app/views/devise/registrations/new.html.haml
@@ -1,26 +1,18 @@
-- @title = "Sign Up"
 .container
   .row
-    .center-panel
-      .panel.panel-default.only
-        .panel-heading
-          %h3.panel-title
-            Sign up
+    .profile.center
+      = panel title: 'Signup', context: :primary do
+        = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal' }, wrapper: :horizontal_form, wrapper_mappings: { check_boxes: :horizontal_radio_and_checkboxes, boolean: :horizontal_boolean } ) do |f|
+          .panel-body
+            = f.error_notification
 
-        .panel-body
+            .form-inputs
+              = f.input :email, required: true, autofocus: true
+              = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length)
+              = f.input :password_confirmation, required: true
+          .panel-footer
+            .buttons
+              = f.button :submit, "Sign up", class: "btn-primary"
 
-          = form_for resource, as: resource_name, url: registration_path(resource_name), layout: :horizontal do |f|
-
-            / = devise_error_messages!
-
-            = f.email_field :email, autofocus: true
-            = f.password_field :password, autocomplete: "off"
-            = f.password_field :password_confirmation, autocomplete: "off"
-
-            - if devise_mapping.rememberable?
-              = f.check_box :remember_me
-
-            = f.submit "Sign Up"
-
-          %p.text-right
-            = render partial: "devise/shared/links"
+            .links
+              = render "devise/shared/links"
