--- a/lib/generators/happy_seed/devise/templates/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/lib/generators/happy_seed/devise/templates/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,14 @@
-<p>Welcome <%= @email %>!</p>
+<p class="center">Welcome <%= @resource.email %>!</p>
 
 <p>You can confirm your account email through the link below:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<!-- button -->
+<table class="btn-primary center" cellpadding="0" cellspacing="0" border="0">
+  <tr>
+    <td>
+      <a href="<%= confirmation_url(@resource, confirmation_token: @token) %>">Confirm my account</a>
+    </td>
+  </tr>
+</table>
+<!-- /button -->
+<p>Thanks, have a lovely day.</p>
