--- a/lib/generators/happy_seed/splash/templates/app/views/splash/index.html.haml
+++ b/lib/generators/happy_seed/splash/templates/app/views/splash/index.html.haml
@@ -1,105 +1,67 @@
-%section.masthead.jumbotron
-  .container
-    .row.text-center.bottom-border
-      %h1 SPORK WRANGLER
-      %h4 Magic phone technology for texting witches and warlocks.
-      .col-sm-6.col-sm-offset-3
-        =image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/phones.png", class: "hero img-responsive"
-
-%section#about
-  .container
-    .row.text-center
-      .col-sm-offset-1.col-sm-10
-        .row
-          %h2 GLUTEN FREE
-          .col-sm-4.text-left
-            =image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/pic1.jpg", class: "img-responsive"
-            %h4 SPROUTS
-            %p It was a humorously perilous business for both of us. For, before we proceed further, it must be said that the monkey-rope was fast at both ends; fast to Queequeg's broad canvas belt, and fast to my narrow leather one. So that for better or for worse, we two, for the time, were wedded; and should poor Queequeg sink to rise no more.
-          .col-sm-4.text-left
-            =image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/pic2.jpg", class: "img-responsive"
-            %h4 COUNTER CULTURE
-            %p It was a humorously perilous business for both of us. For, before we proceed further, it must be said that the monkey-rope was fast at both ends; fast to Queequeg's broad canvas belt, and fast to my narrow leather one.
-          .col-sm-4.text-left
-            =image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/pic3.jpg", class: "img-responsive"
-            %h4 BIKE SANDWICH
-            %p It was a humorously perilous business for both of us. For, before we proceed further, it must be said that the monkey-rope was fast at both ends; fast to Queequeg's broad canvas belt, and fast to my narrow leather one. So that for better or for worse, we two, for the time, were wedded; and should poor Queequeg sink to rise no more. Don't ya think? Kinda crazy if you ask me. But that's none of my business.
-
-%section.divider
-  .container
-    .row.text-center
-      .col-sm-offset-3.col-sm-6
-        %hr
- 
-%section
-  .container
-    .row.text-center
-      .col-sm-offset-1.col-sm-10
-        .row
-          %h2 HOW IT WORKS
-          .col-sm-offset-1.col-sm-10.clearfix
-            #carousel-example-generic.carousel.slide{ data: { ride: "carousel"} }
-              %ol.carousel-indicators
-                %li.active{ data: {target: "#carousel-example-generic", "slide-to" => "0" }}
-                %li{ data: {target: "#carousel-example-generic", "slide-to" => "1" }}
-                %li{ data: {target: "#carousel-example-generic", "slide-to" => "2" }}
-
-              .carousel-inner{ role: "listbox" }
-                .item.active
-                  =image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/venn.png"
-                .item
-                  =image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/venn.png"
-                .item
-                  =image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/venn.png"
-
-%section.divider
-  .container
-    .row.text-center
-      .col-sm-offset-3.col-sm-6
-        %hr
-
-%section#team
-  .container
-    .row.text-center
-      .col-sm-offset-1.col-sm-10
-        .row
-          %h2 THE TEAM
-          .col-sm-offset-1.col-sm-10
-            .row
-              .col-md-6.text-left.clearfix
-                =image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/avatar1.png", class: "avatar pull-left"
-                %h4 Captain Wiggles
-                %p Entrepreneur, self described genius, too many resources not enough ideas.
-              .col-md-6.text-left.clearfix
-                =image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/avatar2.png", class: "avatar pull-left"
-                %h4 Panda Eyepatch
-                %p Marketing. What’s it gonna take to get you into spork wrangler today? I mean today.
-              .col-md-6.text-left.clearfix
-                =image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/avatar3.png", class: "avatar pull-left"
-                %h4 Apple Shirt
-                %p Partnerships and product manufacturing. Engineering degree based on forks.
-              .col-md-6.text-left
-                =image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/avatar4.png", class: "avatar pull-left"
-                %h4 Pixel Face
-                %p Developer, shut in, grumpy but lovable. Technical backbone and anime lover.
-
-%section.divider
-  .container
-    .row.text-center
-      .col-sm-offset-3.col-sm-6
-        %hr
-
-            
-%section#contact
+%section.lightimage
   .container
     .row
-      .col-sm-8.col-sm-offset-2
-        .row.text-center
-          .col-sm-10.col-sm-offset-1
-            %h1 Stay connected for announcements and releases.
-            = form_tag splash_signup_path, role: :form, :class=>'form-inline', :remote=>true do
-              .form-group#signup
-                = text_field_tag :signup_email, '',  :class=>'form-control', :placeholder=>'E-mail'
-                %span.btn
-                  = submit_tag 'Sign up', :class=>'btn btn-primary'
-                %small#signup-message
+      .inner-column
+        %h1 Big Fat Title
+
+        %p.info Great descriptive content
+
+        = link_to "Call to Action", root_url, class: "btn btn-primary btn-lg"
+
+%section.colored.primary#about
+  .container
+    .row
+      .inner-column
+        %h2 Question I'm about to answer?
+
+        %p Why yes, this is the answer.  And it goes on for a bit.  And it goes on for a bit.  And it goes on for a bit.  And it goes on for a bit.  And it goes on for a bit.  And it goes on for a bit.  And it goes on for a bit.  And it goes on for a bit.  And it goes on for a bit.  And it goes on for a bit.  And it goes on for a bit.  And it goes on for a bit.  And it goes on for a bit.  And it goes on for a bit.
+
+        = link_to "Another call to action", root_url, class: "btn btn-primary-inverted btn-lg"
+
+%section.features#features
+  .container
+    .row
+      .inner-block
+        = image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/pic1.jpg", class: "img-responsive"
+        %h4 SPROUTS
+        %p It was a humorously perilous business for both of us. For, before we proceed further, it must be said that the monkey-rope was fast at both ends; fast to Queequeg's broad canvas belt, and fast to my narrow leather one.
+
+      .inner-block
+        = image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/pic2.jpg", class: "img-responsive"
+        %h4 COUNTER CULTURE
+        %p It was a humorously perilous business for both of us. For, before we proceed further, it must be said that the monkey-rope was fast at both ends; fast to Queequeg's broad canvas belt, and fast to my narrow leather one.
+
+      .inner-block
+        = image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/pic3.jpg", class: "img-responsive"
+        %h4 BIKE SANDWICH
+        %p It was a humorously perilous business for both of us. For, before we proceed further, it must be said that the monkey-rope was fast at both ends; fast to Queequeg's broad canvas belt, and fast to my narrow leather one. 
+
+      .inner-block
+        = image_tag "https://s3.amazonaws.com/assets.happyfuncorp.com/splash-assets/pic2.jpg", class: "img-responsive"
+        %h4 COUNTER CULTURE
+        %p It was a humorously perilous business for both of us. For, before we proceed further, it must be said that the monkey-rope was fast at both ends; fast to Queequeg's broad canvas belt, and fast to my narrow leather one.
+
+%section.images
+  .quarter-block
+    = image_tag "https://scontent-lga3-1.cdninstagram.com/t51.2885-15/e35/12237401_1672681199644836_991083135_n.jpg"
+
+  .quarter-block
+    = image_tag "https://scontent-lga3-1.cdninstagram.com/t51.2885-15/e35/12716797_1679687052302598_977732638_n.jpg"
+  .quarter-block
+    = image_tag "https://scontent-lga3-1.cdninstagram.com/t51.2885-15/e35/12107643_1510048632656460_2102141939_n.jpg"
+  .quarter-block
+    = image_tag "https://scontent-lga3-1.cdninstagram.com/t51.2885-15/e35/12237446_1702630963356665_284108057_n.jpg"
+
+            
+%section.contact#contact
+  .container
+    .row
+      .inner-column
+        %h1 Stay connected for announcements and releases.
+        = form_tag splash_signup_path, role: :form, remote: true do
+          .form-group
+            .input-group
+              = text_field_tag :signup_email, "", class: "form-control", placeholder: 'E-Mail', type: "email"
+              %span.input-group-btn
+                = submit_tag 'Sign up', class: 'btn btn-primary'
+          %small#signup-message
